# prg_toolbox

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: generate_plot_examples.py  index.md  plotting_examples.md  reference_analysis_tools.md  reference_coarse_graining.md  reference_config.md  reference_observables.md  reference_pipelines.md  reference_plotting.md
docs/stylesheets/: extra.css
example_notebooks/: but_what_does_PRG_do.ipynb  example_contact_process.ipynb  example_fMRI_data.ipynb  example_large_dataset.ipynb
plotting_examples/: index.html
prg_toolbox/: __init__.py  analysis_tools.py  coarse_graining.py  config.py  datasets.py  observables.py  pipelines.py  plot_activity_distribution.py  plot_imports.py  utils.py  verbosity.py
prg_toolbox/plotting/: __init__.py  plot_activity_distribution.py  plot_autocorrelation_function.py  plot_avalanche_covariance_eigenvalue.py  plot_constellation_steps.py  plot_covariance_spectrum.py  plot_decay_time.py  plot_imports.py  plot_log_silence_probability.py  plot_max_covariance_eigenvalue.py  plot_mean_variance.py  plot_prg_cascade.py
reference_analysis_tools/: index.html
reference_coarse_graining/: index.html
reference_config/: index.html
reference_observables/: index.html
reference_pipelines/: index.html
reference_plotting/: index.html
search/: search_index.json
tests/: conftest.py  test_analysis_tools.py  test_coarse_graining.py  test_observables.py  test_plotting.py  test_utils.py
(+5 files in other folders)
